contact/contactstyle.css
.content {
  background-image: url("../images/rosegold.png");
  background-repeat:no-repeat;
  background-size:cover;
  position:absolute; 
  top:0; 
  bottom:0;
  left:0;
  right:0;
  display:flex;
  justify-content:center;
  align-items:center;
}
.footer{
  position:absolute;
  bottom:0;
  left:0;
  text-align:center;
  width:100%;
  background-color:#777777;
  color:#F0CBCA;
  font-family: "Monaco", monospace;
}
.words{
  width:75%;
  font-family:"Poppins", sans-serif;

}
.top {
  font-size: 40px;
  color: #777777;
  position: relative;
  text-align:center;
  font-weight:100;
  font-size:40px;
}
.bottom {
  position:relative;
  top:2vh;
  font-weight:100;
  background-color:#FBFBFB;
  padding-bottom:2vh;
  padding:5%;
  border-radius:25px;
  text-align: center;
  width:75%;
  left:12.5%;
}
.form {
  position:relative;
  top:2vh;
}
#comments{
  display:inline-block;
  width:400px;
  height:200px;
}
@media screen and (max-width: 768px){
  .words {
    width:100%;
    position:relative;
    top:15%;
    padding-bottom:20%;
  }
  #comments {
    width:250px;
  }
}


/* below is the style for the header*/
/** code based on youtube video
https://www.youtube.com/watch?v=gXkqy0b4M5g*/

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
nav {
    position: fixed;
    top: 0;
    width: 100%;
    display: flex;
    justify-content: space-around;
    align-items: center;
    min-height: 12vh;
    background-color: #FBFBFB;
    font-family: "Poppins", sans-serif;
    font-weight:400;
    z-index:9999;
}
.logo {
    color: #F0CBCA;*;
    text-transform: uppercase;
    letter-spacing: 5px;
    font-size: 20px;
}
.nav-links {
    display: flex;
    justify-content: space-around;
    width: 30%;
}
.nav-links li {
    list-style: none;
}
.nav-links a {
    color: #F0CBCA;
    text-decoration: none;
    letter-spacing: 3px;
    font-weight: bold;
    font-size: 14px;
}
.burger {
    display: none;
}
.burger div {
    width: 25px;
    height: 3px;
    background-color: #F0CBCA;
    margin: 5px;
    transition: all 0.3s ease;
}
@media screen and (max-width: 1024px) {
    .nav-links {
        width: 60%;
    }
}
@media screen and (max-width: 768px) {
    body {
        overflow-x: hidden;
    }    
    .nav-links {
        position: fixed;
        right: 0px;
        height: 95%;
        top: 12vh;
        background-color: #FBFBFB;
        display: flex;
        flex-direction: column;
        align-items: center;
        width: 50%;
        transform: translateX(100%);
        transition: transform 0.5s ease-in;
    }
    .nav-links li {
        opacity: 0;
    }
    .burger {
        display: block;
        cursor: pointer;
    }
}
.nav-active {
        transform: translateX(0%);
}

@keyframes navLinkFade {
    from {
        opacity: 0;
        transform: translateX(50px);
    }
    to {
        opacity: 1;
        transform: translateX(0);
    }
}
.toggle .line1 {
    transform: rotate(-45deg) translate(-5px, 6px);
}
.toggle .line2 {
    opacity: 0;
}
.toggle .line3 {
    transform: rotate(45deg) translate(-5px, -6px);
}

